@@ -19,9 +19,10 @@ EXPORTS
 
 	WgxShellExecuteW
 
-	WgxGetLogFontStructureFromFile
-	WgxSaveLogFontStructureToFile
+	WgxCreateFont
 	WgxSetFont
+	WgxDestroyFont
+	WgxSaveFont
 
 	IncreaseGoogleAnalyticsCounter
 	IncreaseGoogleAnalyticsCounterAsynch
