@@ -33,8 +33,11 @@ HISTORY
       winx_toupper, winx_tolower functions added to zenwinx library
     - udefrag_get_volume_information function added to udefrag library
     - WgxDbgPrint, WgxDbgPrintLastError, WgxDisplayLastError,
-      WgxSafeSubclassWindow, WgxSafeCallWndProc, WgxCenterWindow, WgxSetText
-      calls added to wgx library
+      WgxSafeSubclassWindow, WgxSafeCallWndProc, WgxCenterWindow, WgxSetText,
+      WgxCreateFont, WgxDestroyFont, WgxSaveFont calls added to wgx library
+    - WgxSetFont prototype changed
+    - obsolete WgxGetLogFontStructureFromFile, WgxSaveLogFontStructureToFile
+      calls removed from wgx.dll library
 
                                     ***
 
